Base connection to server and reading db's

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,67 @@
 *.exe
 *.out
 *.app
+
+nostromo/\.vs/nostromo/v15/\.suo
+
+nostromo/\.vs/nostromo/v15/Browse\.VC\.db
+
+nostromo/\.vs/nostromo/v15/Browse\.VC\.opendb
+
+nostromo/\.vs/nostromo/v15/ipch/62050687fb990cb2\.ipch
+
+nostromo/\.vs/nostromo/v15/ipch/fcbe129535222b04\.ipch
+
+nostromo/Debug/nostromo\.log
+
+nostromo/Debug/nostromo\.tlog/CL\.command\.1\.tlog
+
+nostromo/Debug/nostromo\.tlog/CL\.read\.1\.tlog
+
+nostromo/Debug/nostromo\.tlog/CL\.write\.1\.tlog
+
+nostromo/Debug/nostromo\.tlog/nostromo\.lastbuildstate
+
+nostromo/Debug/nostromo\.tlog/unsuccessfulbuild
+
+nostromo/Debug/vc141\.idb
+
+nostromo/Debug/vc141\.pdb
+
+nostromo/nostromo\.sln
+
+nostromo/nostromo\.vcxproj
+
+nostromo/nostromo\.vcxproj\.filters
+
+nostromo/stdafx\.cpp
+
+nostromo/stdafx\.h
+
+nostromo/targetver\.h
+
+nostromo/x64/Release/nostromo\.iobj
+
+nostromo/x64/Release/nostromo\.ipdb
+
+nostromo/x64/Release/nostromo\.log
+
+nostromo/x64/Release/nostromo\.pdb
+
+nostromo/x64/Release/nostromo\.tlog/CL\.command\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/CL\.read\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/CL\.write\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/link\.command\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/link\.read\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/link\.write\.1\.tlog
+
+nostromo/x64/Release/nostromo\.tlog/nostromo\.lastbuildstate
+
+nostromo/x64/Release/nostromo\.tlog/nostromo\.write\.1u\.tlog
+
+nostromo/x64/Release/vc141\.pdb
