add reading dictonary from file

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ nostromo/x64/Release/nostromo\.tlog/nostromo\.lastbuildstate
 nostromo/x64/Release/nostromo\.tlog/nostromo\.write\.1u\.tlog
 
 nostromo/x64/Release/vc141\.pdb
+
+nostromo/0\.txt
